--- a/exercicio/quemsomos.html
+++ b/exercicio/quemsomos.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
 
-    <section id="linha">
+    <section class="linha">
         <h1>Quem Somos</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora ullam doloribus repudiandae consequuntur.
             Dignissimos laborum esse totam quod atque optio rem qui temporibus maiores porro, quae in autem fugit ex!
